@@ -1,5 +1,12 @@
 2017-10-07  Bruno Haible  <bruno@clisp.org>
 
+	Update to the newest gnulib.
+	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
+	&& make -f Makefile.devel build-prerequisites".
+	* gllib/*: Update from gnulib.
+
+2017-10-07  Bruno Haible  <bruno@clisp.org>
+
 	Fix false alarm about mmap on DragonFly BSD.
 	* spvw_mmap.d (mincore_works): New variable.
 	(mincore_init): Initialize it.
